# vigilant-octo-broccoli

./: .gitignore  README.md  instruction_sample.csv  langextract_csv_doc.py  multi_doc_contracts.csv  pyproject.toml  send_csv.py
